added api-key and libreoffice conversion options

--- a/public/index.html
+++ b/public/index.html
@@ -116,6 +116,12 @@
                     <div class="field">  
                         <input name="format" required class="ui inverted input" placeholder="e.g., pdf, png, mp4, avi">
                     </div>
+                    <div class="field">  
+                        <input name="options" class="ui inverted input" placeholder="filter options">
+                    </div>           
+                    <div class="field">  
+                        <input name="api_key" required class="ui inverted input" placeholder="API Key">
+                    </div>  
                     <div class="field">
                         <button class="ui massive fluid inverted button">Convert</button>
                     </div>
