Correct formatting of new fields

--- a/public/index.html
+++ b/public/index.html
@@ -62,6 +62,12 @@
             input[name=format] {
                 text-align: center;
             }
+            input[name=options] {
+                text-align: center;
+            }
+            input[name=api_key] {
+                text-align: center;
+            }
             h1.ui.header {
                 font-size: 48px;
                 font-weight: 200;
